sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:16: error: 'while' expected but identifier found.
    While(swapped==true)
    ^AlgBubbleSort1:17: error: '(' expected but '}' found.
}
^